# Mothbot_Process

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_nocuda.txt
.github/workflows/: windows-desktop-build.yml
apps/: __init__.py  desktop_main.py  main.py
apps/packaging/pyinstaller/: mothbot_desktop.spec
apps/scripts/: build_desktop_linux.sh  build_desktop_macos.sh  build_desktop_windows.ps1  build_desktop_windows_cuda.ps1  package_release_linux.sh  package_release_macos.sh  package_release_windows.ps1  package_release_windows_cuda.ps1
core/: __init__.py  common.py
docs/: DESKTOP_PACKAGING.md  PUBLISH_GITHUB.md
make/: dev.mk  release.mk
pipeline/: __init__.py  cluster.py  create_dataset.py  detect.py  export_csv.py  identify.py  insert_exif.py  insert_metadata.py  open_dataset.py  thumbnails.py
ui/: __init__.py  app.py  gradio_app.py  local_main.py  local_watch.py  path_picker.py
