[project]
name = "mothbot"
version = "0.1.0"
description = "Desktop-packaging-friendly Gradio app for Mothbot processing pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "babel==2.17.0",
    "fiftyone==1.8.0",
    "fiftyone-brain==0.21.3",
    "fiftyone-db==1.3.0",
    "gradio==5.42.0",
    "gradio-client==1.11.1",
    "hdbscan==0.8.40",
    "numpy",
    "open-clip-torch==3.1.0",
    "opencv-python==4.11.0.86",
    "packaging",
    "pandas==2.3.1",
    "piexif==1.1.3",
    "pillow",
    "polars==1.4.1",
    "pybioclip==2.1.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.9.1",
    "tqdm==4.67.1",
    "typing-extensions",
    "tzdata==2025.2",
    "ultralytics==8.3.175",
    "ultralytics-thop==2.0.15",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchaudio",
    "torchvision",
]
cuda118 = [
    "torch==2.7.1+cu118",
    "torchaudio==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
]
packaging = [
    "lap>=0.5.12",
    "pyinstaller>=6.10,<7",
]

[project.scripts]
mothbot-local = "ui.local_main:main"
mothbot-desktop = "apps.desktop_main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apps", "ui", "pipeline", "core"]
